--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 body {
   margin: 2rem 5rem;
+  font-family: 'Nunito', sans-serif;
 }
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 1rem;
 }
 
 .inputContainer {
@@ -18,7 +20,7 @@ h3 {
 .jsonInput,
 .schemaInput {
   width: 95%;
-  height: 300px;
+  height: 70vh;
   padding: 10px;
   font-family: monospace;
 }
@@ -33,6 +35,7 @@ h3 {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  font-family: 'Nunito', sans-serif;
 }
 
 .validationResult {
