--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 body {
-  margin: 2rem 5rem;
   font-family: 'Nunito', sans-serif;
 }
 .container {
@@ -7,6 +6,15 @@ body {
   justify-content: center;
   align-items: center;
   margin-top: 1rem;
+  gap: 15px;
+}
+
+.subContainer {
+  display: flex;
+  align-items: center;
+  margin-top: 1rem;
+  justify-content: space-evenly;
+  gap: 2rem;
 }
 
 .inputContainer {
@@ -55,7 +63,7 @@ h3 {
 
 .generatContainer {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   gap: 1rem;
   margin-bottom: 1rem;
@@ -64,4 +72,68 @@ h3 {
 .headerBackground {
   background-color: #c3e6cb;
   color: #155724;
+}
+
+.logo {
+  height: 20px;
+}
+
+.header {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 20px;
+}
+
+.checkBoxGroup {
+  display: flex;
+  gap: 2rem;
+}
+
+.checkBoxLabel {
+  padding-left: 5px;
+}
+
+.subHeaderContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+.textAreaContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+.dropzone {
+  background: #eee;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  padding: 20px;
+  cursor: pointer;
+  height: 150px;
+  width: auto;
+  border: 2px dashed cyan;
+  outline: none;
+}
+
+.dropzoneReject {
+  border: 2px dashed red;
+}
+
+.dropzoneAccept {
+  border: 2px dashed green;
+}
+
+.conversionDropDown {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 1rem;
 }
