--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,7 @@ h3 {
   border-radius: 4px;
   cursor: pointer;
   font-family: 'Nunito', sans-serif;
+  height: 2rem;
 }
 
 .validationResult {
@@ -136,4 +137,47 @@ h3 {
   align-items: center;
   justify-content: flex-start;
   gap: 1rem;
+}
+
+.table {
+  border-collapse: collapse;
+  width: 80%;
+}
+
+.table th,
+.table td {
+  padding: 10px;
+  text-align: left;
+}
+
+.table th {
+  background-color: #f5f5f5;
+}
+
+.table td input[type='text'] {
+  width: 100%;
+  padding: 5px;
+  border: 1px solid #ddd;
+}
+
+.table td button {
+  padding: 5px 10px;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-right: 5px;
+}
+
+.addButtonBackground {
+  background-color: #4caf50;
+}
+
+.removeButtonBackground {
+  background-color: #a40f26;
+}
+
+.mappingContainer {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
 }
