--- a/src/index.css
+++ b/src/index.css
@@ -62,7 +62,7 @@ body {
 
 .Nav {
   width: 100%;
-  background-color: #c0282e;
+  background-color: #a000fe;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
