--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@ h3 {
 .button {
   padding: 10px 20px;
   font-size: 14px;
-  background-color: #007bff;
+  background-color: #000;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -254,9 +254,10 @@ h3 {
   padding: 8px 16px;
   border: none;
   border-radius: 4px;
-  background-color: #cc0200;
+  background-color: #a000fe;
   color: #ffffff;
   cursor: pointer;
+  margin-bottom: 1rem;
 }
 
 .conversion-container {
@@ -266,7 +267,7 @@ h3 {
 }
 
 .prepared-container {
-  border: 2px solid #cc0200;
+  border: 2px solid #a000fe;
   /* height: 90vh; */
   background-color: white;
 }
